--- a/src/index.html
+++ b/src/index.html
@@ -16,9 +16,8 @@
                 <article class="tile is-child notification is-success">
                     <div class="content">
                         <div class="block">
-                            <div class="button is-info" id="back" style="  position: absolute;
-                            top: 50%;
-                            transform: translateY(-50%);">Back</div>
+                            <div class="button is-info" id="back" style="position: absolute; top: 50%; transform: translateY(-50%)">Back</div>
+                        
                         </div>
                     </div>
                 </article>
@@ -41,52 +40,47 @@
                                 <div id="bp3djs-viewer2d"></div>
                                 <div id="bp3djs-viewer3d"></div>
                             </div>
-                            <ol id="buttons_viewer_2d">
-                                <li><button class="button is-primary" id="walls-button">Draw walls</button></li>
-                                <li><button class="button is-primary" id="doors-button">Draw doors</button></li>
-                                <li><button class="button is-primary" id="windows-button">Draw windows</button></li>
-                                <li><button class="button is-info" id="reset-button">Reset</button></li>
-                            </ol>
-                            <ol id="buttons_viewer_3d">
-                                <li><button class="button is-primary" id="prev_scene">Prev Generation</button></li>
-                                <li><button class="button is-primary" id="next_scene">Next Generation</button></li>
-                                <!-- <li><button class="button is-info" id="viewer2d">Back</button></li> -->
-                            </ol>
-                            <div class="loader" id="loader" style="visibility:hidden;"></div>
+                            <div class="block" >
+                                <ul id="buttons-drawing-2d">
+                                    <li><button class="button is-primary" id="draw_mode">Draw</button></li>
+                                    <!-- <li><button class="button is-primary" id="move_mode">Move</button></li> -->
+                                    <li><button class="button is-primary" id="doors-windows-button">Draw doors or windows</button></li>
+                                    <li><button class="button is-info" id="reset-button">Reset</button></li>
+                                </ul>
+                            </div>
+                            <div class="block">
+                                <ul id="buttons-drawing-3d" style="visibility: hidden;">
+                                    <li><button class="button is-primary" id="draw_2d_mode">Draw walls</button></li>
+                                    <li><button class="button is-primary" id="add-window-button" >Add a window</button></li>
+                                    <li><button class="button is-primary" id="add-door-button" >Add a door</button></li>
+                                    <li><button class="button is-info" id="reset-button">Reset</button></li>
+                                </ul>
+                            </div>
+                            <div class="block" style="visibility: hidden;" id="buttons_viewer_3d">
+                                <ol>
+                                    <li><button class="button is-primary" id="prev_scene">Prev Generation</button></li>
+                                    <li><button class="button is-primary" id="next_scene">Next Generation</button></li>
+                                </ol>
+                            </div>
+                            <div class="loader" id="loader" style="visibility: hidden"></div>
                         </div>
-                </article>
+                </div></article>
             </div>
         </div>
         <div class="tile is-1 is-parent" id="right_tile">
-            <div class="tile is-child is-primary" id="send-points">
+            <div class="tile is-child is-primary">
                 <article class="tile is-child notification is-success">
                     <div id="right_tile_div" class="content">
-                        <div class="block">
-                            <div class="button is-primary" id="send-points" style="  position: absolute;
-                            top: 50%;
-                            transform: translateY(-50%);">Next</div>
+                        <div class="block" id="draw_3d_mode_div">
+                            <div class="button is-primary" id="draw_3d_mode" style="position: absolute; top: 50%; transform: translateY(-50%)">Next</div>
+                        </div>
+                        <div class="block" id="send_points_div" style="visibility: hidden;">
+                            <button class="button is-primary" id="send-points" style="position: absolute; top: 50%; transform: translateY(-50%)">Generate</button>
                         </div>
                     </div>
                 </article>
             </div>
         </div>
-    </div>
-    <!-- <div class="container">
-            <div class="content" id="title">
-                <h1 class="title">
-                    Blueprint JS - Floorplan
-                </h1>
-                <p class="subtitle">
-                    Drawing a Bedroom floorplan
-                </p>
-            </div>
-            <div class="block">
-            <div id="bp3d-js-app">
-                <div id="bp3djs-viewer2d"></div>
-                <div id="bp3djs-viewer3d"></div>
-            </div>
-        </div> -->
-
     </div>
     <link href="./styles/main.css" rel="stylesheet">
     <script src="./index.js" type="module"></script>
