minimalistic design dashboard + editor + registration

--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@
                             <h1 class="title">
                                 Blueprint JS - Floorplan
                             </h1>
-                            <p class="subtitle" id="current_subtitle">
+                            <p class="subtitle">
                                 Drawing a Bedroom floorplan
                             </p>
                         </div>
