nodeJs Server Created and Connected, Firebase Registration Connected,  HTML to EJS Converted

--- a/public/Pages/landingPage.html
+++ b/public/Pages/landingPage.html
@@ -22,7 +22,7 @@
                             <li>Home</li>
                             <li>About</li>
                             <li>Contact</li>
-                            <li>Get Started</li>
+                            <li class="getStartedButton">Get Started</li>
                         </ul>
             </div>
         </header>
@@ -34,7 +34,7 @@
                             <h2>Powered By Artificial Intelligence</h2>
                             <hr class="devideInfo"/>
                             <p>Unlock the power of AI to instantly create stunning interior home designs with just one click</p>
-                            <button>Try It!</button>
+                            <button class="getStartedButton">Try It!</button>
                     </div>
                     <div class="display">
                         <img class="display-nft" src="../assets/Ben-Robots.jpg" alt="unsplash-OG44d93i-NJk" border="0">
@@ -156,8 +156,8 @@
     </div>
 
     </div>
-    <link href="../landingPage.css" rel="stylesheet">
-    <!-- <script src="./index.js" type="module"></script> -->
+    <link href="../styles/landingPage.css" rel="stylesheet">
+    <script src="../js/landingPage.js"></script>
 </body>
 
 </html>
