add new landing and early access pages

--- a/public/Pages/editor.html
+++ b/public/Pages/editor.html
@@ -179,7 +179,7 @@
     </div>
   </div>
 
-  <img class="toasty" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/163870/Toasty!MK3.png" alt="Toasty">
+  <!-- <img class="toasty" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/163870/Toasty!MK3.png" alt="Toasty"> -->
   <link href="../editor.css" rel="stylesheet">
   <script src="../js/editor.js" type="module"></script>
 </body>
